# oac

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  Makefile.unix  OPUS_ACKNOWLEDGMENTS.md  README  README.md  celt_headers.mk  configure.ac  meson.build  meson_options.txt  oac-uninstalled.pc.in  oac.cfg  oac.m4  oac.pc.in  oac_headers.mk  oac_sources.mk
.github/workflows/: autotools-cross-mips.yml  cmake.yml  dred.yml
celt/: _kiss_fft_guts.h  arch.h  bands.c  bands.h  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  celt_lpc.h  cpu_support.h  cwrs.c  cwrs.h  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_c5x.h  fixed_c6x.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.c  kiss_fft.h  laplace.c  laplace.h  mathops.c  mathops.h  mdct.c  mdct.h  meson.build  mfrngcod.h  mini_kfft.c  modes.c  modes.h  oac_custom_demo.c  opus_custom_demo.c  (+14 more)
celt/arm/: arm_celt_map.c  armcpu.c  armcpu.h  armopts.s.in  celt_fft_ne10.c  celt_mdct_ne10.c  celt_neon_intr.c  celt_pitch_xcorr_arm.s  fft_arm.h  fixed_arm64.h  fixed_armv4.h  fixed_armv5e.h  kiss_fft_armv4.h  kiss_fft_armv5e.h  mathops_arm.h  mdct_arm.h  meson.build  pitch_arm.h  pitch_neon_intr.c
celt/dump_modes/: Makefile  dump_modes.c  dump_modes_arch.h  dump_modes_arm_ne10.c
celt/mips/: celt_mipsr1.h  fixed_generic_mipsr1.h  kiss_fft_mipsr1.h  mdct_mipsr1.h  pitch_mipsr1.h
celt/tests/: meson.build  test_unit_cwrs32.c  test_unit_dft.c  test_unit_entropy.c  test_unit_laplace.c  test_unit_mathops.c  test_unit_mdct.c  test_unit_mini_kfft.c  test_unit_rotation.c  test_unit_types.c
celt/x86/: celt_lpc_sse.h  celt_lpc_sse4_1.c  pitch_avx.c  pitch_sse.c  pitch_sse.h  pitch_sse2.c  pitch_sse4_1.c  vq_sse.h  vq_sse2.c  x86_arch_macros.h  x86_celt_map.c  x86cpu.c  x86cpu.h
cmake/: OacBuildtype.cmake  OacConfig.cmake  OacConfig.cmake.in  OacFunctions.cmake  OacPackageVersion.cmake  OacSources.cmake  README.md  cpu_info_by_asm.c  cpu_info_by_c.c  vla.c
dnn/: adaconvtest.c  burg.c  burg.h  bwe_demo.c  common.h  download_model.bat  download_model.sh  dred_coding.c  dred_coding.h  dred_compare.c  dred_config.h  dred_decoder.c  dred_decoder.h  dred_encoder.c  dred_encoder.h  dred_rdovae.h  dred_rdovae_dec.c  dred_rdovae_dec.h  dred_rdovae_enc.c  dred_rdovae_enc.h  dump_data.c  dump_lpcnet_tables.c  fargan.c  fargan.h  fargan_demo.c  freq.c  freq.h  fwgan.c  fwgan.h  kiss99.c  kiss99.h  lossgen.c  lossgen.h  lossgen_demo.c  lpcnet.c  lpcnet.h  lpcnet_enc.c  lpcnet_plc.c  lpcnet_private.h  lpcnet_tables.c  (+24 more)
dnn/arm/: arm_dnn_map.c  dnn_arm.h  nnet_dotprod.c  nnet_neon.c
dnn/x86/: dnn_x86.h  nnet_avx2.c  nnet_sse2.c  nnet_sse4_1.c  x86_dnn_map.c
doc/: Doxyfile.in  Makefile.am  meson.build  trivial_example.c
include/: meson.build  oac.h  oac_custom.h  oac_defines.h  oac_multistream.h  oac_projection.h  oac_types.h  opus_defines.h
m4/: oac-intrinsics.m4
meson/: README.md  get-version.py  read-sources-list.py
scripts/: local_build.py
silk/: A2NLSF.c  API.h  CNG.c  HP_variable_cutoff.c  Inlines.h  LPC_analysis_filter.c  LPC_fit.c  LPC_inv_pred_gain.c  LP_variable_cutoff.c  MacroCount.h  MacroDebug.h  NLSF2A.c  NLSF_VQ.c  NLSF_VQ_weights_laroia.c  NLSF_decode.c  NLSF_del_dec_quant.c  NLSF_encode.c  NLSF_stabilize.c  NLSF_unpack.c  NSQ.c  NSQ.h  NSQ_del_dec.c  PLC.c  PLC.h  SigProc_FIX.h  VAD.c  VQ_WMat_EC.c  ana_filt_bank_1.c  biquad_alt.c  bwexpander.c  bwexpander_32.c  check_control_input.c  code_signs.c  control.h  control_SNR.c  control_audio_bandwidth.c  control_codec.c  debug.c  debug.h  dec_API.c  (+59 more)
silk/arm/: LPC_inv_pred_gain_arm.h  LPC_inv_pred_gain_neon_intr.c  NSQ_del_dec_arm.h  NSQ_del_dec_neon_intr.c  NSQ_neon.c  NSQ_neon.h  SigProc_FIX_armv4.h  SigProc_FIX_armv5e.h  arm_silk_map.c  biquad_alt_arm.h  biquad_alt_neon_intr.c  macros_arm64.h  macros_armv4.h  macros_armv5e.h
silk/fixed/: LTP_analysis_filter_FIX.c  LTP_scale_ctrl_FIX.c  apply_sine_window_FIX.c  autocorr_FIX.c  burg_modified_FIX.c  corrMatrix_FIX.c  encode_frame_FIX.c  find_LPC_FIX.c  find_LTP_FIX.c  find_pitch_lags_FIX.c  find_pred_coefs_FIX.c  k2a_FIX.c  k2a_Q16_FIX.c  main_FIX.h  noise_shape_analysis_FIX.c  pitch_analysis_core_FIX.c  process_gains_FIX.c  regularize_correlations_FIX.c  residual_energy16_FIX.c  residual_energy_FIX.c  schur64_FIX.c  schur_FIX.c  structs_FIX.h  vector_ops_FIX.c  warped_autocorrelation_FIX.c
silk/float/: LPC_analysis_filter_FLP.c  LPC_inv_pred_gain_FLP.c  LTP_analysis_filter_FLP.c  LTP_scale_ctrl_FLP.c  SigProc_FLP.h  apply_sine_window_FLP.c  autocorrelation_FLP.c  burg_modified_FLP.c  bwexpander_FLP.c  corrMatrix_FLP.c  encode_frame_FLP.c  energy_FLP.c  find_LPC_FLP.c  find_LTP_FLP.c  find_pitch_lags_FLP.c  find_pred_coefs_FLP.c  inner_product_FLP.c  k2a_FLP.c  main_FLP.h  noise_shape_analysis_FLP.c  pitch_analysis_core_FLP.c  process_gains_FLP.c  regularize_correlations_FLP.c  residual_energy_FLP.c  scale_copy_vector_FLP.c  scale_vector_FLP.c  schur_FLP.c  sort_FLP.c  structs_FLP.h  warped_autocorrelation_FLP.c  wrappers_FLP.c
silk/mips/: NSQ_mips.h  macros_mipsr1.h  sigproc_fix_mipsr1.h
silk/tests/: meson.build  test_unit_LPC_inv_pred_gain.c
silk/x86/: NSQ_del_dec_avx2.c  NSQ_del_dec_sse4_1.c  NSQ_sse4_1.c  (+5 more)
src/: analysis.c  analysis.h  extensions.c  mapping_matrix.c  mapping_matrix.h  meson.build  mlp.c  mlp.h  mlp_data.c  oac.c  oac_compare.c  oac_decoder.c  oac_demo.c  oac_encoder.c  oac_multistream.c  oac_multistream_decoder.c  oac_multistream_encoder.c  oac_private.h  oac_projection_decoder.c  oac_projection_encoder.c  opus_decoder.c  opus_demo.c  opus_encoder.c  opus_multistream_encoder.c  qext_compare.c  repacketizer.c  repacketizer_demo.c
tests/: meson.build  oac_build_test.sh  oac_decode_fuzzer.c  oac_encode_regressions.c  opus_encode_regressions.c  random_config.sh  run_vectors.sh  test_oac_ambisonics.c  test_oac_api.c  test_oac_common.h  test_oac_custom.c  test_oac_decode.c  test_oac_dred.c  test_oac_encode.c  test_oac_extensions.c  test_oac_padding.c  test_oac_projection.c  test_opus_custom.c  test_opus_encode.c
(+36 files in other folders)
